Add Medium Java Solution for 8. String to Integer (atoi) from LeetCode